Created test file for modeling

--- a/Resale Flat Price Data-Cleaning.ipynb
+++ b/Resale Flat Price Data-Cleaning.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6bfacdd8",
+   "id": "70912983",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,155 +17,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "975ae954",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>month</th>\n",
-       "      <th>town</th>\n",
-       "      <th>flat_type</th>\n",
-       "      <th>block</th>\n",
-       "      <th>street_name</th>\n",
-       "      <th>storey_range</th>\n",
-       "      <th>floor_area_sqm</th>\n",
-       "      <th>flat_model</th>\n",
-       "      <th>lease_commence_date</th>\n",
-       "      <th>remaining_lease</th>\n",
-       "      <th>resale_price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2017-01</td>\n",
-       "      <td>ANG MO KIO</td>\n",
-       "      <td>2 ROOM</td>\n",
-       "      <td>406</td>\n",
-       "      <td>ANG MO KIO AVE 10</td>\n",
-       "      <td>10 TO 12</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>Improved</td>\n",
-       "      <td>1979</td>\n",
-       "      <td>61 years 04 months</td>\n",
-       "      <td>232000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2017-01</td>\n",
-       "      <td>ANG MO KIO</td>\n",
-       "      <td>3 ROOM</td>\n",
-       "      <td>108</td>\n",
-       "      <td>ANG MO KIO AVE 4</td>\n",
-       "      <td>01 TO 03</td>\n",
-       "      <td>67.0</td>\n",
-       "      <td>New Generation</td>\n",
-       "      <td>1978</td>\n",
-       "      <td>60 years 07 months</td>\n",
-       "      <td>250000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2017-01</td>\n",
-       "      <td>ANG MO KIO</td>\n",
-       "      <td>3 ROOM</td>\n",
-       "      <td>602</td>\n",
-       "      <td>ANG MO KIO AVE 5</td>\n",
-       "      <td>01 TO 03</td>\n",
-       "      <td>67.0</td>\n",
-       "      <td>New Generation</td>\n",
-       "      <td>1980</td>\n",
-       "      <td>62 years 05 months</td>\n",
-       "      <td>262000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2017-01</td>\n",
-       "      <td>ANG MO KIO</td>\n",
-       "      <td>3 ROOM</td>\n",
-       "      <td>465</td>\n",
-       "      <td>ANG MO KIO AVE 10</td>\n",
-       "      <td>04 TO 06</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>New Generation</td>\n",
-       "      <td>1980</td>\n",
-       "      <td>62 years 01 month</td>\n",
-       "      <td>265000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2017-01</td>\n",
-       "      <td>ANG MO KIO</td>\n",
-       "      <td>3 ROOM</td>\n",
-       "      <td>601</td>\n",
-       "      <td>ANG MO KIO AVE 5</td>\n",
-       "      <td>01 TO 03</td>\n",
-       "      <td>67.0</td>\n",
-       "      <td>New Generation</td>\n",
-       "      <td>1980</td>\n",
-       "      <td>62 years 05 months</td>\n",
-       "      <td>265000.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     month        town flat_type block        street_name storey_range  \\\n",
-       "0  2017-01  ANG MO KIO    2 ROOM   406  ANG MO KIO AVE 10     10 TO 12   \n",
-       "1  2017-01  ANG MO KIO    3 ROOM   108   ANG MO KIO AVE 4     01 TO 03   \n",
-       "2  2017-01  ANG MO KIO    3 ROOM   602   ANG MO KIO AVE 5     01 TO 03   \n",
-       "3  2017-01  ANG MO KIO    3 ROOM   465  ANG MO KIO AVE 10     04 TO 06   \n",
-       "4  2017-01  ANG MO KIO    3 ROOM   601   ANG MO KIO AVE 5     01 TO 03   \n",
-       "\n",
-       "   floor_area_sqm      flat_model  lease_commence_date     remaining_lease  \\\n",
-       "0            44.0        Improved                 1979  61 years 04 months   \n",
-       "1            67.0  New Generation                 1978  60 years 07 months   \n",
-       "2            67.0  New Generation                 1980  62 years 05 months   \n",
-       "3            68.0  New Generation                 1980   62 years 01 month   \n",
-       "4            67.0  New Generation                 1980  62 years 05 months   \n",
-       "\n",
-       "   resale_price  \n",
-       "0      232000.0  \n",
-       "1      250000.0  \n",
-       "2      262000.0  \n",
-       "3      265000.0  \n",
-       "4      265000.0  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "id": "446bcff5",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
-    "DF = pd.read_csv('resale-flat-prices-jan-2017-onwards.csv')\n",
-    "DF.head()"
+    "original_df= pd.read_csv('resale-flat-prices-jan-2017-onwards.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "44f2634c",
+   "id": "9a1afb29",
    "metadata": {},
    "outputs": [
     {
@@ -191,64 +55,147 @@
    ],
    "source": [
     "#Majority of the flats sold in Singapore is 4 ROOM.\n",
-    "DF['flat_type'].value_counts()[:5].plot(kind='bar')"
+    "original_df['flat_type'].value_counts()[:5].plot(kind='bar')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ddf00e05",
+   "id": "b6f09264",
    "metadata": {},
    "outputs": [],
    "source": [
-    "DF['remaining_lease'] = DF['remaining_lease'].astype(str)\n",
-    "DF['remaining_lease'] = DF['remaining_lease'].str.rsplit(' ', n=3).str.get(0)"
+    "#To-Do:\n",
+    "#Convert flat_model data to one-hot encoding values or label encoded values.\n",
+    "#Convert storey to usable data.\n",
+    "#Convert flat_type to usable data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "570be3c7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DF.to_csv('resale-flat-prices-cleaned.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "f19c9858",
+   "execution_count": 5,
+   "id": "d37433f0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "month                  0\n",
-       "town                   0\n",
-       "flat_type              0\n",
-       "block                  0\n",
-       "street_name            0\n",
-       "storey_range           0\n",
-       "floor_area_sqm         0\n",
-       "flat_model             0\n",
-       "lease_commence_date    0\n",
-       "remaining_lease        0\n",
-       "resale_price           0\n",
-       "dtype: int64"
+       "array(['10 TO 12', '01 TO 03', '04 TO 06', '07 TO 09', '13 TO 15',\n",
+       "       '19 TO 21', '22 TO 24', '16 TO 18', '34 TO 36', '28 TO 30',\n",
+       "       '37 TO 39', '49 TO 51', '25 TO 27', '40 TO 42', '31 TO 33',\n",
+       "       '46 TO 48', '43 TO 45'], dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "#Check how many unique objects there are in the column.\n",
+    "original_df['storey_range'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f421f06e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Function to get the mean of the storey the flat is likely to be in.\n",
+    "#If storey_range is from 10-12, we'll take 11 as the floor of the flat.\n",
+    "\n",
+    "def get_mean_floor(x):\n",
+    "    return int((int(x[:2]) + int(x[-2:]))*0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3d8004fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This column 'storey' will be used in our data analysis.\n",
+    "\n",
+    "original_df['storey'] = original_df['storey_range'].map(lambda x: get_mean_floor(x)) \n",
+    "\n",
+    "#We shall only take the remaining years of the lease into account for our data analysis.\n",
+    "\n",
+    "original_df['remaining_lease'] = original_df['remaining_lease'].str.rsplit(' ', n=3).str.get(0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "10eef388",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "room4_df = original_df[original_df['flat_type'] == \"4 ROOM\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b5c04eb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Define town_premium variable to as the difference between median price for each town and overall median resale price\n",
+    "#town premium = difference between median price for each town vs overall median resale price\n",
+    "townprem = room4_df.groupby(['town'],as_index=False).median()[['town','resale_price']]\n",
+    "townprem['town_premium'] = townprem['resale_price']-townprem['resale_price'].median()\n",
+    "\n",
+    "#flat model premium = difference between median price for each model vs overall median resale price\n",
+    "flatprem= room4_df.groupby(['flat_model'],as_index = False).median()[['flat_model','resale_price']]\n",
+    "flatprem['flat_model_premium'] = flatprem['resale_price']-flatprem['resale_price'].median()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f9b88a76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_df = pd.merge(room4_df, townprem[['town','town_premium']],on='town')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "78302bb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "room4_df = pd.merge(x_df, flatprem[['flat_model','flat_model_premium']],on='flat_model')\n",
+    "room4_df.to_csv(\"4-room-flat-data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5aa61e65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cd9297c",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0959ae0d",
+   "id": "854e9baa",
    "metadata": {},
    "outputs": [],
    "source": []
